deployment.prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: prometheus
  name: prometheus
  namespace: prometheus
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: prometheus
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prometheus
    spec:
      containers:
      - args:
        - --https-address=:8443
        - --provider=openshift
        - --openshift-service-account=prometheus
        - '--openshift-sar={"namespace":"prometheus","resource":"deployment","resourceName":"prometheus","verb":"get"}'
        - '--openshift-delegate-urls={"/":{"resource":"pods","namespace":"prometheus","verb":"get"}}'
        #- '--openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get"}}'
        - --openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - --upstream=http://localhost:9090
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --cookie-secret=SECRET
        - --cookie-expire=2h
        - --pass-basic-auth=false
        image: registry.redhat.io/openshift4/ose-oauth-proxy-rhel9:v4.17.0
        imagePullPolicy: IfNotPresent
        name: prometheus-oauth-proxy
        ports:
        - containerPort: 8443
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          httpGet:
            path: /oauth/healthz
            port: 8443
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          httpGet:
            path: /oauth/healthz
            port: 8443
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        # this secret is created from the prometheus service and annotation 
        - mountPath: /etc/tls/private
          name: prometheus-svc-tls
      - args:
        - --config.file=/etc/prometheus/config/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention.time=28d
        - --enable-feature=memory-snapshot-on-shutdown
        - --enable-feature=auto-reload-config
        - --storage.tsdb.min-block-duration=30m
        image: registry.redhat.io/openshift4/ose-prometheus:latest
        imagePullPolicy: IfNotPresent
        name: prometheus
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 45
          httpGet:
            path: /-/ready
            port: 9090
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 45
          httpGet:
            path: /-/healthy
            port: 9090
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/prometheus/config/prometheus.yml
          name: prometheus-config
          subPath: prometheus.yml
        - mountPath: /etc/prometheus/configmaps/prometheus-service-ca
          name: prometheus-service-ca
        - mountPath: /etc/prometheus/secrets/prometheus-svc-tls
          name: prometheus-svc-tls
          readOnly: true
        - mountPath: /prometheus
          name: prometheus
        - mountPath: /etc/prometheus/alerting_rules/general-alerts.yaml
          name: general-alerts
          subPath: general-alerts.yaml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: prometheus
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: prometheus-config
        name: prometheus-config
      - configMap:
          defaultMode: 420
          name: prometheus-service-ca
        name: prometheus-service-ca
      - name: prometheus-svc-tls
        secret:
          defaultMode: 420
          secretName: prometheus-svc-tls
      - name: prometheus
        persistentVolumeClaim:
          claimName: prometheus
      - configMap:
          defaultMode: 420
          name: general-alerts
        name: general-alerts
