service.alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: alertmanager-svc-tls
  labels:
    app: alertmanager
  name: alertmanager
  namespace: prometheus
spec:
  ports:
  - name: alertmanager
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: alertmanager
  type: ClusterIP
