service.prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: prometheus-svc-tls
  labels:
    app: prometheus
  name: prometheus
  namespace: prometheus
spec:
  ports:
  - name: prometheus
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: prometheus
  type: ClusterIP
