route.alertmanager.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: alertmanager
  name: alertmanager
  namespace: prometheus
spec:
  host: alertmanager-prometheus.apps.rosa.prometheus.jgsh.p3.openshiftapps.com
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: alertmanager
    weight: 100
  wildcardPolicy: None
