route.prometheus.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: prometheus
spec:
  port:
    targetPort: prometheus
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
